cicd/manifests/apps/keycloak/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
spec:
  ingressClassName: traefik
  rules:
    - host: sso.prod.server.home
      http:
        paths:
          - backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - sso.prod.server.home
      secretName: keycloak-tls-secret
